# cielvox-v2

./: .clang-format  .clang-tidy  .dockerignore  .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build-android.sh  build-ios.sh  build-vulkan.bat  build-wasm.sh  build-windows.bat  build-xcframework.sh  docker-compose.cuda.yml  docker-compose.vulkan.yml  docker-compose.yml  pytest.ini
bindings/javascript/: CMakeLists.txt  README.md  copy_if_exists.cmake  emscripten.cpp  package-tmpl.json  package.json
examples/: CMakeLists.txt  common-stelnet.cpp  common.cpp  ffmpeg-transcode.cpp  generate-karaoke.sh  livestream.sh  melotts-test.cpp  server.py  twitch.sh  yt-wsp.sh
examples/addon.node/: README.md  addon.cpp  vad-example.js
examples/addon.node/__test__/: transcribe-session.spec.js  whisper.spec.js
examples/bench/: CMakeLists.txt  README.md  bench.cpp
examples/bench.wasm/: CMakeLists.txt  README.md  emscripten.cpp  index-tmpl.html
examples/cielvox2-asr-test-bpe/: CMakeLists.txt  main.cpp
examples/cielvox2-asr-test-conv/: CMakeLists.txt  main.cpp
examples/cielvox2-asr-test-llm/: CMakeLists.txt  main.cpp
examples/cielvox2-asr-test-trace/: CMakeLists.txt  main.cpp
examples/cli/: CMakeLists.txt  README.md  cli.cpp  mimo_tokenizer_smoke.cpp  stelnet_aligner_cli.cpp  stelnet_aligner_cli.h  stelnet_backend.cpp  stelnet_backend.h  stelnet_backend_bark.cpp  stelnet_backend_canary.cpp  stelnet_backend_chatterbox.cpp  stelnet_backend_cielvox2_tts.cpp  stelnet_backend_cielvox_asr.cpp  stelnet_backend_cohere.cpp  stelnet_backend_cosyvoice3.cpp  stelnet_backend_csm.cpp  stelnet_backend_dia.cpp  stelnet_backend_f5_tts.cpp  stelnet_backend_fastconformer_ctc.cpp  stelnet_backend_fastpitch.cpp  stelnet_backend_firered_asr.cpp  stelnet_backend_funasr.cpp  stelnet_backend_gemma4_e2b.cpp  stelnet_backend_glm_asr.cpp  stelnet_backend_granite.cpp  stelnet_backend_granite_nle.cpp  stelnet_backend_indextts.cpp  stelnet_backend_kokoro.cpp  stelnet_backend_kugelaudio.cpp  stelnet_backend_kyutai_stt.cpp  stelnet_backend_lfm2_audio.cpp  stelnet_backend_m2m100.cpp  stelnet_backend_melotts.cpp  stelnet_backend_mimo_asr.cpp  stelnet_backend_mini_omni2.cpp  stelnet_backend_moonshine.cpp  stelnet_backend_moonshine_streaming.cpp  stelnet_backend_moss_audio.cpp  stelnet_backend_nemotron.cpp  stelnet_backend_omniasr.cpp  (+62 more)
examples/cohere-align/: CMakeLists.txt  main.cpp
examples/command/: CMakeLists.txt  README.md  command.cpp
examples/command.wasm/: CMakeLists.txt  README.md  emscripten.cpp  index-tmpl.html
examples/demo/: demo.py  demo.rs
examples/deprecation-warning/: CMakeLists.txt  README.md  deprecation-warning.cpp
examples/lsp/: CMakeLists.txt  README.md  lsp.cpp  whisper.vim
examples/nfa-align/: CMakeLists.txt  main.cpp
examples/quantize/: CMakeLists.txt  quantize.cpp
examples/server/: CMakeLists.txt  README.md  httplib.h  realtime_server.cpp  realtime_server.h  server.cpp  ws_stream.cpp  ws_stream.h
examples/stelnet-quantize/: CMakeLists.txt  main.cpp
examples/stelnet.android/: README.md  settings.gradle
examples/stelnet.android.java/: README.md  settings.gradle
examples/stelnet.android.java/app/: build.gradle
examples/stelnet.android/app/: build.gradle
examples/stelnet.android/lib/: build.gradle
examples/stelnet.nvim/: README.md  stelnet.nvim
examples/stelnet.objc/: README.md
examples/stelnet.objc/stelnet.objc/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
examples/stelnet.objc/stelnet.objc.xcodeproj/: project.pbxproj
examples/stelnet.swiftui/: README.md
examples/stelnet.swiftui/stelnet.swift/: LibWhisper.swift
examples/stelnet.swiftui/stelnet.swiftui.demo/: StelnetDemoApp.swift
examples/stelnet.swiftui/stelnet.swiftui.xcodeproj/: project.pbxproj
examples/stelnet.wasm/: CMakeLists.txt  README.md  emscripten.cpp  index-tmpl.html
examples/stream/: CMakeLists.txt  README.md  stream.cpp
examples/stream.wasm/: CMakeLists.txt  README.md  emscripten.cpp  index-tmpl.html
examples/sycl/: CMakeLists.txt  build.sh
examples/talk-llama/: CMakeLists.txt  README.md  llama-adapter.cpp  llama-adapter.h  llama-arch.cpp  llama-arch.h  llama-batch.cpp  llama-batch.h  llama-chat.cpp  llama-chat.h  llama-context.cpp  llama-context.h  llama-cparams.h  llama-ext.h  llama-grammar.cpp  llama-grammar.h  llama-graph.cpp  llama-graph.h  llama-hparams.cpp  llama-hparams.h  llama-impl.cpp  llama-impl.h  llama-io.cpp  llama-io.h  llama-kv-cache-iswa.cpp  llama-kv-cache-iswa.h  llama-kv-cache.cpp  llama-kv-cache.h  llama-kv-cells.h  llama-memory-hybrid-iswa.cpp  llama-memory-hybrid-iswa.h  llama-memory-hybrid.cpp  llama-memory-hybrid.h  llama-memory-recurrent.cpp  llama-memory-recurrent.h  llama-memory.cpp  llama-memory.h  llama-mmap.cpp  llama-mmap.h  llama-model-loader.cpp  (+16 more)
examples/talk-llama/models/: afmoe.cpp  apertus.cpp  arcee.cpp  (+110 more)
examples/vad-speech-segments/: CMakeLists.txt  README.md  speech.cpp
examples/vibevoice-test-stages/: CMakeLists.txt  main.cpp
examples/voxtral-test-e2e/: CMakeLists.txt  main.cpp
examples/voxtral-test-encoder/: CMakeLists.txt  main.cpp
examples/voxtral-test-llm/: CMakeLists.txt  main.cpp
examples/wchess/: README.md
python/: README.md  pyproject.toml
stelnet-rs/: Cargo.toml  README.md
stelnet-rs/examples/: cluster-smoke.rs
stelnet-rs/src/: lib.rs
stelnet-rs/tests/: integration.rs
stelnet-sys/: Cargo.toml  README.md  build.rs
stelnet-sys/src/: lib.rs
stelnet_audio/: CMakeLists.txt
stelnet_audio/include/: stelnet_audio.h
stelnet_audio/src/: audio_tower.cpp
stelnet_lid/: CMakeLists.txt
stelnet_lid/include/: stelnet_lid.h
stelnet_lid/src/: lid_cld3.cpp  lid_cld3.h  lid_fasttext.cpp  text_lid_dispatch.cpp  text_lid_dispatch.h
stelnet_punc/: CMakeLists.txt
stelnet_punc/include/: stelnet_punc.h
stelnet_punc/src/: fireredpunc.cpp  pcs.cpp
stelnet_truecase/: CMakeLists.txt
stelnet_truecase/include/: stelnet_truecase.h
stelnet_truecase/src/: truecaser.cpp  truecaser_crf.cpp  truecaser_crf.h  truecaser_lstm.h
(+1215 files in other folders)
