[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stelnet"
version = "0.5.7"
description = "Lightweight on-device speech recognition via ggml — Python bindings for Stelnet (Whisper, CielvoxASR, FastConformer, Canary, Parakeet, Cohere, Granite, Voxtral, wav2vec2, and more)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
    { name = "Stelnet contributors" },
]
keywords = ["asr", "speech-recognition", "whisper", "ggml", "speech-to-text", "transcription"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/CrispStrobe/Stelnet"
Repository = "https://github.com/CrispStrobe/Stelnet"
Issues = "https://github.com/CrispStrobe/Stelnet/issues"
Changelog = "https://github.com/CrispStrobe/Stelnet/blob/main/HISTORY.md"

[tool.setuptools]
packages = ["stelnet"]

[tool.setuptools.package-data]
stelnet = ["_helpers.c"]
