[package]
name = "stelnet-sys"
version = "0.5.7"
edition = "2021"
description = "Raw FFI bindings to Stelnet — auto-builds libstelnet from source via cmake, or links a pre-installed copy if STELNET_LIB_DIR is set."
license = "MIT"
repository = "https://github.com/CrispStrobe/Stelnet"
homepage = "https://github.com/CrispStrobe/Stelnet"
documentation = "https://docs.rs/stelnet-sys"
readme = "README.md"
keywords = ["asr", "speech-recognition", "whisper", "ggml", "ffi"]
categories = ["external-ffi-bindings", "multimedia::audio"]
links = "stelnet"

# The crate is a pure FFI shim — only the .rs sources, build.rs, README,
# LICENSE, and Cargo.toml ship to crates.io. The native library is not
# vendored; build.rs locates an existing build, runs cmake on the parent
# repo, or (legacy) links a system-installed `libstelnet.{so,dylib,dll}`
# when `STELNET_LIB_DIR` is set. The crates.io publish is a no-op for
# the cmake path: it requires the parent Stelnet sources, which only
# exist in a git checkout — that's the same trade-off CrispEmbed makes.
include = ["src/**/*.rs", "build.rs", "Cargo.toml", "README.md", "LICENSE"]

[features]
default = []
# When build.rs runs cmake itself (decision tree in build.rs), these
# features map to `-DGGML_{CUDA,METAL,VULKAN}=ON`. For the legacy
# STELNET_LIB_DIR path they're inert — the system-installed
# `libstelnet` already encodes whichever backends it was built with.
cuda = []
metal = []
vulkan = []
